--- a/food_dash/templates/homepage.html
+++ b/food_dash/templates/homepage.html
@@ -1,1 +1,46 @@
-<p>Hello api world </p>
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8"/>
+    <title>Recipe dashboard homepage</title>
+    <!-- Change the bootstrap theme -->
+    <link rel="stylesheet" href="https://bootswatch.com/5/materia/bootstrap.min.css" />
+</head>
+
+<body>
+
+   <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link active" href="/">Giggle Search</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/giggle-news/">Giggle News</a>
+            </li>
+        </ul>
+    </nav> -->
+
+    <div class="container">
+        <div class="row">
+
+            <div class="col-lg-3"></div> <!-- Column for spacing -->
+
+            <div class="col-lg-6">
+                <div class="mt-5 mb-3 text-center">
+                  <!--<img src="/static/giggle_logo.png"  /> -->
+                </div>
+
+                <form method="GET" action="/search-results/">
+                    <div class="input-group mb-2">
+                        <input name="searchterm" type="text" class="form-control form-control-lg" placeholder="Type what you want to Giggle for..." />
+                        <button class="btn btn-primary btn-lg input-group-text">Search</button>
+                    </div>
+
+                </form>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
