--- a/food_dash/templates/homepage.html
+++ b/food_dash/templates/homepage.html
@@ -6,41 +6,108 @@
     <meta charset="utf-8"/>
     <title>Recipe dashboard homepage</title>
     <!-- Change the bootstrap theme -->
-    <link rel="stylesheet" href="https://bootswatch.com/5/materia/bootstrap.min.css" />
-</head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	</head>
+	
 
 <body>
 
-   <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5">
+   <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link active" href="/">Giggle Search</a>
+                <a class="nav-link active" href="/">Back to  homepage</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/giggle-news/">Giggle News</a>
+                <a class="nav-link" href="/search-recipes/?{{ request.GET.urlencode }}">GET RECIPES</a>
+            </li>
+			<li class="nav-item">
+                <a class="nav-link" href="/compare-calories/?{{ request.GET.urlencode }}">CALORIE COMPARISION</a>
+            </li>
+			<li class="nav-item">
+                <a class="nav-link" href="/nutrient-breakdown/?{{ request.GET.urlencode }}">MACRO NUTRIENT BREAKDOWN</a>
             </li>
         </ul>
-    </nav> -->
+    </nav> 
 
     <div class="container">
+		<div class="row">
+		<div class="col">
+		<h1>Enter your nutritional requirements for this meal </h1>
+		</div>
+		</div>
+		<form method="GET" action="/search-recipes/">
         <div class="row">
-
-            <div class="col-lg-3"></div> <!-- Column for spacing -->
-
-            <div class="col-lg-6">
-                <div class="mt-5 mb-3 text-center">
-                  <!--<img src="/static/giggle_logo.png"  /> -->
-                </div>
-
-                <form method="GET" action="/search-results/">
+				<div class="col-lg-6 mt-4">
                     <div class="input-group mb-2">
-                        <input name="searchterm" type="text" class="form-control form-control-lg" placeholder="Type what you want to Giggle for..." />
-                        <button class="btn btn-primary btn-lg input-group-text">Search</button>
+                        <label> Minimum calories <input name="minCalories" type="number" class="form-control form-control-lg" placeholder="200" /> </label>
                     </div>
+			</div> 
 
-                </form>
+            <div class="col-lg-6 mt-4">
+                    <div class="input-group mb-2">
+                       <label> Maximum calories <input name="maxCalories" type="number" class="form-control form-control-lg" placeholder="800" /> </label>
+                    </div>
             </div>
         </div>
-    </div>
+    
+		<div class="row">
+
+            <div class="col-lg-6 mt-4">
+                    <div class="input-group mb-2">
+                        <label> Minimum carbs(grams)<input name="minCarbs" type="number" class="form-control form-control-lg" placeholder="10" /> </label>
+                    </div>
+			</div> 
+
+            <div class="col-lg-6 mt-4">
+                    <div class="input-group mb-2">
+                       <label> Maximum carbs(grams)<input name="maxCarbs" type="number" class="form-control form-control-lg" placeholder="100" /> </label>
+                    </div>
+            </div>
+        </div>
+    
+	
+		<div class="row">
+
+            <div class="col-lg-6 mt-4">
+                    <div class="input-group mb-2">
+                        <label> Minimum protein(grams)<input name="minProtein" type="number" class="form-control form-control-lg" placeholder="10" /> </label>
+                    </div>
+			</div> 
+
+            <div class="col-lg-6 mt-4">
+                    <div class="input-group mb-2">
+                       <label> Maximum protein(grams)<input name="maxProtein" type="number" class="form-control form-control-lg" placeholder="100" /> </label>
+                    </div>
+            </div>
+        </div>
+		
+		<div class="row">
+
+            <div class="col-lg-6 mt-4">
+			
+	
+                    <div class="input-group mb-2">
+                        <label> Minimum fat(grams)<input name="minFat" type="number" class="form-control form-control-lg" placeholder="10" /> </label>
+                    </div>
+              
+			</div> 
+
+            <div class="col-lg-6 mt-4">
+
+                
+                    <div class="input-group mb-2">
+                       <label> Maximum fat(grams)<input name="maxFat" type="number" class="form-control form-control-lg" placeholder="100" /> </label>
+                    </div>
+            </div>
+        </div>
+		
+		<div class="row">
+		<div class="col mt-4">
+         <button class="btn btn-primary btn-lg input-group-text">Search Recipes</button>
+		</div>
+		</div>
+	</form>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
 </body>
 </html>
