--- a/food_dash/templates/homepage.html
+++ b/food_dash/templates/homepage.html
@@ -4,18 +4,17 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <title>Recipe dashboard homepage</title>
-    <!-- Change the bootstrap theme -->
+    <title>{% block title %}Recipe dashboard homepage{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	</head>
 	
 
 <body>
-
+	{% block navbar %}
    <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link active" href="/">Back to  homepage</a>
+                <a class="nav-link active" href="/">HOMEPAGE</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/search-recipes/?{{ request.GET.urlencode }}">GET RECIPES</a>
@@ -28,8 +27,9 @@
             </li>
         </ul>
     </nav> 
-
+	{% endblock %}
     <div class="container">
+	{% block content %}
 		<div class="row">
 		<div class="col">
 		<h1>Enter your nutritional requirements for this meal </h1>
@@ -105,6 +105,7 @@
 		<div class="col mt-4">
          <button class="btn btn-primary btn-lg input-group-text">Search Recipes</button>
 		</div>
+		{% endblock %}
 		</div>
 	</form>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
