--- a/food_dash/templates/nutrient_breakdown.html
+++ b/food_dash/templates/nutrient_breakdown.html
@@ -1,34 +1,10 @@
 
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8"/>
-    <title>Calorie comparision of recipes</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-	</head>
-	
+{% extends "homepage.html" %}
 
-<body>
+{% block title %} Nutrient breakdown of recipes {% endblock %}	
 
-      <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link active" href="/">Back to  homepage</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/search-recipes/?{{ request.GET.urlencode }}">GET RECIPES</a>
-            </li>
-			<li class="nav-item">
-                <a class="nav-link" href="/compare-calories/?{{ request.GET.urlencode }}">CALORIE COMPARISION</a>
-            </li>
-			<li class="nav-item">
-                <a class="nav-link" href="/nutrient-breakdown/?{{ request.GET.urlencode }}">MACRO NUTRIENT BREAKDOWN</a>
-            </li>
-        </ul>
-    </nav> 
-	
-	<div class="container">
+{% block content %}
 	<div class="row">
 	<div class="col">
     <figure>
@@ -36,9 +12,8 @@
     </figure>
 	</div>
 	</div>
-	</div>
-	
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+{% endblock %}
 
-</body>
-</html>
+
+
+
