--- a/food_dash/templates/recipes.html
+++ b/food_dash/templates/recipes.html
@@ -1,33 +1,11 @@
 
-
+{% extends "homepage.html" %}
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8"/>
-    <title>Recipe dashboard</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-	</head>
-	
 
+{% block title %} Recipe dashboard {% endblock %}
 <body>
 
-      <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link active" href="/">Back to  homepage</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/search-recipes/?{{ request.GET.urlencode }}">GET RECIPES</a>
-            </li>
-			<li class="nav-item">
-                <a class="nav-link" href="/compare-calories/?{{ request.GET.urlencode }}">CALORIE COMPARISION</a>
-            </li>
-			<li class="nav-item">
-                <a class="nav-link" href="/nutrient-breakdown/?{{ request.GET.urlencode }}">MACRO NUTRIENT BREAKDOWN</a>
-            </li>
-        </ul>
-    </nav> 
-
+{% block content %}
   <table class="table">
   <thead>
     <tr>
@@ -54,9 +32,6 @@
 	{% endfor %}
   </tbody>
 </table>
+{% endblock %}
 
-<embed type="image/svg+xml" src={{ rendered_chart_svg_as_datauri | safe }} />
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
-</body>
-</html>
