--- a/food_dash/templates/homepage.html
+++ b/food_dash/templates/homepage.html
@@ -31,11 +31,14 @@
     <div class="container">
 	{% block content %}
 		<div class="row">
-		<div class="col">
+		<div class="col" class="mb-3" class="input-group mb-3">
 		<h1>Enter your nutritional requirements for this meal </h1>
 		</div>
 		</div>
-		<form method="POST" action="/search-recipes/">
+		<div class="row" class="mt-5">
+			<div class="col-lg-6 mt-4" >
+				
+					<form class="input-group mb-4" method="GET" action="/search-recipes/">
        <!-- <div class="row">
 				<div class="col-lg-6 mt-4">
                     <div class="input-group mb-2">
@@ -102,7 +105,9 @@
         </div> -->
 		
 		{{ form.as_p }}
-		
+				
+			</div>
+		</div>
 		<div class="row">
 		<div class="col mt-4">
          <button class="btn btn-primary btn-lg input-group-text">Search Recipes</button>
